--- a/0710.5373/rmpfinalsub.tex
+++ b/0710.5373/rmpfinalsub.tex
@@ -523,8 +523,8 @@ inner products in Eq.~(\ref{sec2:KGfg}) at time $t$,
 one obtains
 \begin{equation}
 \int d^D{\bf x}\, d^D{\bf x}'
-f_B(t,{\bf x})p_B(t,{\bf x}')\left[\hat{\phi}(t,{\bf x}),\hat{\pi}(t,{\bf
-x}')\right]
+f_B(t,{\bf x})p_B(t,{\bf x}')\bigl[\hat{\phi}(t,{\bf x}),\hat{\pi}(t,{\bf
+x}')\bigr]
 = i\int d^D{\bf x}f_B(t,{\bf x})p_B(t,{\bf x}).
 \end{equation}
 Since $f_B(t,{\bf x})$ and $p_B(t,{\bf x})$ are arbitrary, one can
@@ -848,11 +848,11 @@ $\hat{\Phi}(t,z)$, satisfies
 \end{equation}
 This field can be expanded as
 \begin{equation}
-\hat{\Phi}(t,z) = \int_{0}^\infty \frac{dk}{\sqrt{4\pi k}} \left(
-\hat{b}_{-k}e^{-ik(t-z)} + \hat{b}_{+k}e^{-ik(t+z)}.
+\hat{\Phi}(t,z) = \int_{0}^\infty \frac{dk}{\sqrt{4\pi k}} \bigl(
+\hat{b}_{-k}e^{-ik(t-z)} + \hat{b}_{+k}e^{-ik(t+z)}
 + \hat{b}_{-k}^\dagger
 e^{ik(t-z)} +
-\hat{b}_{+k}^\dagger e^{ik(t+z)}\right).
+\hat{b}_{+k}^\dagger e^{ik(t+z)}\bigr).
 \end{equation}
 The annihilation and creation operators satisfy
 \begin{equation}
@@ -959,13 +959,13 @@ $\alpha^L_{\omega k}$ and $\beta^L_{\omega k}$, where
 & = & 
 \int_0^\infty \frac{dk}{\sqrt{4\pi
 k}}\left(\alpha^R_{\omega k}e^{-ikV}
-+\beta^R_{\omega k}e^{ikV}\right),\nonumber \\
++\beta^R_{\omega k}e^{ikV}\right),
  \label{sec2:gomegavRR}\\
 \theta(-V)g_\omega(\bar{v})
 & = &  
 \int_0^\infty \frac{dk}{\sqrt{4\pi
 k}}\left(\alpha^L_{\omega k}e^{-ikV}
-+\beta^L_{\omega k}e^{ikV}\right). \nonumber \\
++\beta^L_{\omega k}e^{ikV}\right).
 \label{sec2:gomegavLR}
 \end{eqnarray}
 Here, $\theta(x)=0$ if $x<0$ and $\theta(x)=1$ if $x>0$, i.e.~$\theta$
@@ -2811,26 +2811,25 @@ where
 ${\bf k}_\perp = (k_x, k_y)$ denotes the transverse momentum with
 respect to the direction of the acceleration, the quantity $R^\perp$ is
 given by  
-\begin{eqnarray}
-R^\perp & = & \frac{|q|^2}{16\pi^3 T} 
+\begin{align}
+R^\perp & = \frac{|q|^2}{16\pi^3 T} 
              \int^{\infty}_{-\infty} \frac{ d k_z }{ \omega }
              \int^{\infty}_{-\infty} d\tau' 
              \int^{\infty}_{-\infty} d\tau''  
              e^{i\Delta E (\tau' - \tau'')}     
 \nonumber \\   
-& \times & e^{ i \omega [\sinh a\tau' - \sinh a\tau'']/a }
+& \quad \times e^{ i \omega [\sinh a\tau' - \sinh a\tau'']/a }
            e^{-i k_z    [\cosh a\tau' - \cosh a\tau'']/a }
 \nonumber \\
-&=&  \frac{|q|^2}{16\pi^3 T}
+&= \frac{|q|^2}{16\pi^3 T}
      \int^{\infty}_{-\infty} \frac{dk_z}{\omega}
      \int^{\infty}_{-\infty} d \tau
      \int^{\infty}_{-\infty} d \sigma 
      e^{i\Delta E \sigma}
-\nonumber \\
-& \times & e^{ (2 i/a) \sinh a\sigma 
+  e^{ (2 i/a) \sinh a\sigma 
               (\omega \cosh a\tau - k_z \sinh a\tau ) },
 \nonumber
-\end{eqnarray}  
+\end{align}  
 and we have defined
 $
 \tau \equiv (\tau' + \tau'')/2
@@ -3619,16 +3618,16 @@ I^{\rm abs} & = & \int_0^{\infty} d\omega g(\omega) B(-\omega),
 \end{eqnarray}
 are associated with the spontaneous emission, induced emission and
 absorption probabilities, respectively, with
-\begin{eqnarray}
-&  B(\omega) \equiv &
+\begin{align}
+B(\omega) & \equiv
 \frac{4\sin^2(\omega+\Delta E)T}{(\omega+\Delta E)^2}
 - \frac{4\sin^2(\omega+\Delta E)T}{\alpha^2 + (\omega+\Delta E)^2}\nonumber \\
-& & +\frac{4\alpha^2\cos 2(\omega +\Delta E) T}
+ & \quad +\frac{4\alpha^2\cos 2(\omega +\Delta E) T}
                    {[\alpha^2+(\omega+\Delta E)^2]^2} \nonumber \\
-& & +\frac{4\alpha^3\sin 2(\omega+\Delta E)T}
+ & \quad +\frac{4\alpha^3\sin 2(\omega+\Delta E)T}
                    {(\omega+\Delta E)[\alpha^2+(\omega+\Delta E)^2]^2},
 \label{BW}
-\end{eqnarray}
+\end{align}
 and 
 $g(\omega) \equiv \omega n(\omega)
  = \omega[e^{2\pi\omega/a} - 1]^{-1}$.
@@ -3748,19 +3747,17 @@ in Minkowski spacetime\footnote{The symbols $r$ and $\theta$ correspond
 to the usual polar coordinates.} at the radius $r=r_0$ with angular velocity 
 $\Omega \equiv d\theta/dt > 0$. Using the interaction action~(\ref{SI1}), we may 
 write the detector excitation amplitude as
-\begin{eqnarray}
+\begin{equation}
 ^{\rm exc}\!\! {\cal A}_{\bf k} 
- & = &  i \langle E |\otimes \!\langle{\bf k}\,{}_{\rm M}
+= i \langle E |\otimes \!\langle{\bf k}\,{}_{\rm M}
       | \hat S_I | 0_{\rm M} \rangle \otimes|E_0 \rangle
-\nonumber \\
-& = &  i q 
+=  i q 
     \int_{-\infty}^{\infty} d\tau 
     \exp (i \Delta E \,\tau)
  \!\langle{\bf k}\,{}_{\rm M}
       |  \hat \Phi [x^\mu(\tau) ] | 0_{\rm M} \rangle,
-\nonumber \\
 \label{UDgeneralA}
-\end{eqnarray}
+\end{equation}
 where $\tau$ is the detector proper time. 
 Thus, the proper excitation rate~(\ref{RMinertial}) can 
 be given as \cite{Broutetal95}
@@ -3811,15 +3808,14 @@ The proper acceleration of such a detector is
 $a \equiv {\sqrt {-a_{\mu}a^{\mu}}} = 
 \Omega^2 \gamma^2 r_0$.
 Then, the proper excitation rate can be written as 
-\begin{eqnarray}
- && ^{\rm exc}\! R^{m=0}_{\rm circ} =
+\begin{equation}
+^{\rm exc}\! R^{m=0}_{\rm circ} =
     \frac{|q|^2}{4\pi^2} \int_{-\infty}^{\infty} d\sigma \,
     e^{-i \Delta E \,\sigma}
-\nonumber \\
- && \times  [ -\gamma^2(\sigma-i\epsilon)^2
+ [ -\gamma^2(\sigma-i\epsilon)^2
               +4 r_0^2 \sin^2(\Omega \gamma \sigma/2) ]^{-1}.
 \label{RMcirc}
-\end{eqnarray}
+\end{equation}
 This non-vanishing excitation rate has been 
 evaluated numerically by \textcite{Letawetal80} and \textcite{Letaw81}
 [see also \textcite{Kimetal87} for some further discussion].
@@ -4207,20 +4203,19 @@ accelerated frame calculations,
 we have orthonormalized the modes (\ref{NM1})-(\ref{NM2})
 according to the same inner-product 
 definition that will be used in Sec.~\ref{subsubsection:DnipRop}: 
-\begin{eqnarray}
+\begin{equation}
 ( 
 \psi^{(\pm \omega)}_{k \sigma} , \psi^{(\pm \omega')}_{k' \sigma'} 
 )  
-&\equiv &
+\equiv
 \int_\Sigma d\Sigma_\mu 
 \bar \psi^{(\pm \omega)}_{k \sigma} \gamma^\mu 
 \psi^{(\pm \omega')}_{k' \sigma'}
-\nonumber \\
-&=&
+=
 \delta(k-k') \delta_{\sigma \sigma'} 
 \delta_{\pm \omega \; \pm \omega'},
 \label{IP}
-\end{eqnarray}
+\end{equation}
 where $\bar \psi \equiv \psi^\dagger \gamma^0$.
 (In this section, we have chosen $t= {\rm const}$ for 
 the hypersurface $\Sigma$.) Then, the  canonical 
@@ -4268,19 +4263,18 @@ the process~$(i)$. The vacuum transition amplitude is given by
 By using the current (\ref{CI}) in Eq.~(\ref{S}) and recalling that 
 $\hat S_I  $ acts 
 also on the nucleon states in Eq.~(\ref{AMP}), we obtain
-\begin{eqnarray}
+\begin{align}
 {\cal A}^{p  \to n}_{(i)} 
-&=&
+&=
 G_F \int_{-\infty}^{\infty} dt \int_{-\infty}^{\infty} dz 
 \frac{ e^{i  \Delta m  \tau} 
-\delta(z-\sqrt{t^2+a^{-2}})}{az}
-\nonumber \\
-&\times&
+\delta(z-\sqrt{t^2+a^{-2}})}{az}\nonumber\\
+&\quad \times
 {u_{\mu}} \!\langle e^+_{k_e \sigma_e} , \nu_{k_\nu \sigma_\nu}\,{}_{\rm M} \vert\;
 \hat{\bar \Psi}_\nu \gamma^\mu \hat \Psi_e\;
 \vert 0_{\rm M} \rangle,
 \label{AMPI}
-\end{eqnarray}
+\end{align}
 where 
 $
 \Delta m \equiv m_n - m_{p }
@@ -4801,50 +4795,45 @@ $
 is the fermionic thermal factor associated with the Unruh thermal bath
 and $T=2\pi\delta (0)$ is the total nucleon proper time.
 By using Eq.~(\ref{V2}) in Eq.~(\ref{AP1}), we obtain 
-\begin{eqnarray}
-& &  
+\begin{align}
 \frac{1}{T} \frac{d^2 {\cal P}^{p \to n}_{(ii)}}{d\omega_{e^-}  
 d\omega_\nu} 
-\!\! = \!\!
+&=
 \frac{4G_F^2 m_e m_\nu}{\pi^3 a^2}  e^{-\pi\Delta m/a} 
 \delta (\omega_{e^-}-\omega_\nu-\Delta m)
 \nonumber
 \\
-&& \times 
+& \quad \times 
 \{
 Re [ K_{i\omega_\nu/a -1/2} (m_\nu/a) K_{i\omega_{e^-}/a+1/2}(m_e/a)] 
 \}^2.
-\nonumber \\
 \label{AP4}
-\end{eqnarray}
+\end{align}
 By integrating Eq.~(\ref{AP4}) over $\omega_{\nu}$, we obtain the 
 following transition rate associated with process (ii):
-\begin{eqnarray}
-&& 
-\Gamma_{(ii)}^{p\to n} =  
+\begin{align}
+\Gamma_{(ii)}^{p\to n} & =  
 \frac{4G_F^2m_e m_\nu }{\pi^3 a^2 e^{\pi\Delta m/a}}  
 \int_{\Delta m}^{\infty} d\omega_{e^-}
 \nonumber \\
-&& \times
+&\quad \times
 \{ 
 Re[K_{i(\omega_{e^-}-\Delta m)/a -1/2} (m_\nu/a)
    K_{i\omega_{e^-}+1/2}(m_e/a) ] 
 \}^2.
 \nonumber
-\end{eqnarray}
+\end{align}
 We recall that Rindler frequencies may take 
 arbitrary positive real values (see 
 Sec.~\ref{subsubsection:E<mc2}).
 Analogous calculations lead to the following transition rates for 
 processes~$(iii)$ and~$(iv)$: 
-\begin{eqnarray}
-&&
-\Gamma_{(iii)}^{p\to n}=  
+\begin{align}
+\Gamma_{(iii)}^{p\to n}& =  
 \frac{4G_F^2m_e m_\nu }{\pi^3 a^2 e^{\pi\Delta m/a}}  
 \int_{0}^{\infty} d\omega_{e^+}
 \nonumber \\
-&&
-\times 
+& \quad \times 
 \{Re
 [ K_{i(\omega_{e^+}+\Delta m)/a +1/2} (m_\nu/a)
   K_{i\omega_{e^+}-1/2}(m_e/a)
@@ -4852,22 +4841,21 @@ processes~$(iii)$ and~$(iv)$:
 \}^2,
 \nonumber
 \\
-&&
-\Gamma_{(iv)}^{p\to n}= 
+\Gamma_{(iv)}^{p\to n} &= 
 \frac{4G_F^2m_e m_\nu }{\pi^3 a^2e^{\pi\Delta m/a}}
 \int_{0}^{\Delta m} d\omega_{e^-}
 \nonumber \\
-&& 
+& \quad 
 \times 
 \{ 
 Re[K_{i(\omega_{e^-}-\Delta m)/a -1/2} (m_\nu/a)
    K_{i\omega_{e^-}+1/2}(m_e/a) ] 
 \}^2.
 \nonumber
-\end{eqnarray}
+\end{align}
 \begin{figure}
 \begin{center}
-\mbox{\epsfig{file=crispinoetal_fig04.ps,width=0.45 \textwidth,angle=0}}
+\mbox{\epsfig{file=crispinoetal_fig04.ps,width=4in,angle=0}}
 \end{center}
 \caption{Branching ratios 
 $BR_{(ii)}$, $BR_{(iii)}$ and $BR_{(iv)}$ are plotted. 
@@ -4886,21 +4874,20 @@ $
 +\Gamma_{(iv)}^{p\to n},
 $
 namely
-\begin{eqnarray}
-&&
+\begin{align}
 \Gamma_{\rm acc}^{p\to n} 
-= \frac{4G_F^2m_e m_\nu \exp (-\pi\Delta m/a)}{\pi^3 a^2 }  
-\int_{-\infty}^{\infty} d\omega 
+&= \frac{4G_F^2m_e m_\nu \exp (-\pi\Delta m/a)}{\pi^3 a^2 }  
 \nonumber \\
-&& 
+&\quad
 \times 
+\int_{-\infty}^{\infty} d\omega 
 \{ 
 Re 
   [K_{i(\omega-\Delta m)/a -1/2} (m_\nu/a)
    K_{i\omega/a+1/2}(m_e/a)] 
 \}^2.
 \nonumber
-\end{eqnarray}
+\end{align}
 It is interesting to note that although 
 transition rates  have fairly distinct interpretations in the inertial
 and accelerated frames, mean proper lifetimes are scalars and must be the same
@@ -5286,14 +5273,14 @@ $\Box \phi = 0 $
 For each set of quantum numbers the solution,
 which does not diverge as $\xi \to +\infty$, is 
 obtained by letting $m=0$ in Eq.~(\ref{sec2:normalizedvR}):
-\begin{eqnarray}
-\phi^{(\omega , {\bf k}_\bot )} & = & 
+\begin{equation}
+\phi^{(\omega , {\bf k}_\bot )} = 
 \left[\frac{\sinh(\pi\omega/a)}{4\pi^4 a}\right]^{1/2}
 K_{i\omega/ a} 
-[ ({k_\perp}/{a}) e^{a\xi } ]\nonumber \\
-&& \times e^{i{\bf k}_\bot\cdot{\bf x}_\bot - i \omega \tau}.
+[ ({k_\perp}/{a}) e^{a\xi } ]
+\,e^{i{\bf k}_\bot\cdot{\bf x}_\bot - i \omega \tau}.
 \label{16.5}
-\end{eqnarray}
+\end{equation}
 
 One can choose a set of independent normal modes as 
 \begin{eqnarray}
@@ -5308,7 +5295,7 @@ C^{(2, \omega, {\bf k}_\bot )} (\partial_\xi \phi , -i\omega \phi, 0, 0),
 \label{14} \\
 A_\mu^{(3, \omega,{\bf k}_\bot)}  & = & 
 C^{(3, \omega, {\bf k}_\bot )} (-i\omega \phi , 
-\partial _\xi \phi, i k_x \phi, i k_y \phi ),\nonumber \\
+\partial _\xi \phi, i k_x \phi, i k_y \phi ),
 \label{15}
 \end{eqnarray}
 where $A_{\mu} = (A_{\tau}, A_{\xi}, A_x, A_y)$, 
@@ -5985,7 +5972,7 @@ Eq.~(\ref{fdt}) should be seen as an approximation. See
 \end{equation}
 \begin{figure}
 \begin{center}
-\mbox{\epsfig{file=crispinoetal_fig09.ps,width=0.45\textwidth,angle=0}}
+\mbox{\epsfig{file=crispinoetal_fig09.ps,width=4in,angle=0}}
 \end{center}
 \caption{The frequency-dependent temperature $\beta^{-1}/a $ 
 [see Eq.~(\ref{fdt})] is plotted as a function of $\Delta E/a$ 
@@ -6049,20 +6036,19 @@ where
 $
 \tilde g = (g-2)/2
 $,
-\begin{eqnarray}
-& & 
+\begin{align}
 F_1(\tilde g) 
-= 
+& = 
 1+ \frac{41 \tilde g}{45} - \frac{23 \tilde g^2}{18} 
  - \frac{8 \tilde g^3}{15} +\frac{14 \tilde g^4}{15} 
 \nonumber \\
-& -&
+&\quad -
 \frac{8 \tilde g }{5 \sqrt{3} |\tilde g|} 
 \left( 
 1+ \frac{11 \tilde g }{12} - \frac{17 \tilde g^2}{12} 
  - \frac{13 \tilde g^3}{24} + \tilde g^4
 \right),
-\end{eqnarray}
+\end{align}
 and
 \begin{equation}
 F_2(\tilde g) =
@@ -7039,20 +7025,20 @@ g_{\omega k_\perp}^\ast (\xi) g_{\omega^\prime k_\perp}(\xi).
  By the differential equation (\ref{sec2:bessel}) satisfied by
 $g_{\omega k_\perp}$ and the condition (\ref{sec2:normalization}) 
 we find
-\begin{eqnarray}
-&& (\omega^2 - \omega^{\prime 2}) S_A(\omega,\omega^\prime)\nonumber \\
-&& = \left[g_{\omega' k_\perp}(\xi)\frac{d\ }{d\xi}g_{\omega
+\begin{align}
+(\omega^2 - \omega^{\prime 2}) S_A(\omega,\omega^\prime)
+& = \left[g_{\omega' k_\perp}(\xi)\frac{d\ }{d\xi}g_{\omega
 k_\perp}^\ast(\xi)
 - g_{\omega k_\perp}^\ast (\xi)\frac{d\ }{d\xi}g_{\omega' k_\perp}(\xi)
 \right]_{\xi=-A} \nonumber \\
-&&  \approx \frac{1}{\pi}
+&  \quad \approx \frac{1}{\pi}
 \left\{(\omega-\omega^\prime)
 \sin\left[(\omega+\omega^\prime)A-\gamma(\omega)-\gamma(\omega')
 \right]\right.\nonumber \\
-&& \left.\ \  
+& \quad \quad \left.\ \  
 +(\omega+\omega')\sin\left[(\omega-\omega')A
 -\gamma(\omega)+\gamma(\omega')\right]\right\}
-\end{eqnarray}
+\end{align}
 for $\xi <0, \, |\xi| \gg1$.
 Then, using the formula
 \begin{equation}
