--- a/0710.5373/rmpfinalsub.tex
+++ b/0710.5373/rmpfinalsub.tex
@@ -1125,7 +1125,7 @@ simultaneous equations, we find
 |0_{\rm M}\rangle  =  
 \langle 0_{\rm M}|\hat{a}^{L\dagger}_{+\omega_i}\hat{a}_{+\omega_i}^L
 |0_{\rm M}\rangle 
-= (e^{2\pi \omega_i/a} - 1)^{-1}. 
+= \frac{1}{(e^{2\pi \omega_i/a} - 1)}
 \label{sec2:improp1}
 \end{equation}
 Hence, the expectation value of the Rindler-particle number is that of a
@@ -1833,7 +1833,7 @@ k}_\bot}(x')\right]
 v_{\omega\,-{\bf k}_\bot}^R(x^{\prime})
 + v^{L*}_{\omega{\bf k}_\bot}(x)
 v^{R*}_{\omega\,-{\bf k}_\bot}(x^{\prime})\bigr] 
-(e^{\pi\omega/a}-e^{-\pi\omega/a})\biggr\}.\\
+(e^{\pi\omega/a}-e^{-\pi\omega/a})\biggr\}.
 \phantom{x}
 \end{aligned}
 \end{equation}
@@ -1876,13 +1876,13 @@ F(f,g) \equiv \int d^4x d^4 x'f^*(x)g(x')\Delta(x;x').
 \end{equation}
 We find using Eq.~(\ref{sec2:undefined?})
 \begin{multline}
-F(f,g) =  \int_0^\infty d\omega \int d^2{\bf k}_\bot\nonumber
+F(f,g) =  \int_0^\infty d\omega \int d^2{\bf k}_\bot
 \times \\
-\biggl[
+\bigl[
 \hat{f}^{R*}(-\omega,{\bf k}_\bot)
 \hat{g}^{R}(-\omega,{\bf k}_\bot)
 + \hat{f}^{R*}(+\omega,{\bf k}_\bot)
-\hat{g}^{R}(+\omega,{\bf k}_\bot)\biggr],
+\hat{g}^{R}(+\omega,{\bf k}_\bot)\bigr],
 \end{multline}
 where $\hat{f}^{R}$ is defined by Eq.~(\ref{sec2:fR}), and
 $\hat{g}^{R}$ is defined similarly.  It can readily be shown that this
@@ -2715,7 +2715,7 @@ the world line $x^\mu =x^\mu (\tau )$ of a
 uniformly accelerated detector along the $z$-axis with proper 
 acceleration $a$ is given by 
 \begin{equation}
-t(\tau ) = a^{-1} \sinh a \tau, \;\;\; z(\tau) = a^{-1} \cosh a \tau\;
+t(\tau ) = \frac{\sinh a \tau}{a}, \;\;\; z(\tau) = \frac{\cosh a \tau}{a}\;
 \label{Rindlercoordinates}
 \end{equation}
 and $x(\tau ), y(\tau ) = {\rm const}$~(see Fig.~\ref{Cartesiancoordinates}).
@@ -2762,8 +2762,7 @@ rate is alternatively expressed in terms of the golden
 rule~(\ref{RMgeneral}).}
 \begin{equation}
 ^{\rm exc}\! R =
-          T^{-1}
-          \int d^{3} {\bf k}
+          \frac{1}{T}\int d^{3} {\bf k}
           |^{\rm exc}\!\! {\cal A}^{\rm em}_{\bf k}|^2,
 \label{RMinertial}
 \end{equation}
@@ -2920,16 +2919,16 @@ $
 \varpi = \zeta/\lambda 
 $,
 and write
-\begin{eqnarray}
-R^\perp &= &\frac{|q|^2}{16 \pi^3 a}
+\begin{align*}
+R^\perp &= \frac{|q|^2}{16 \pi^3 a}
           \left| 
           \int^{\infty}_{0} \frac{d\kappa}{\kappa^{1-i\Delta E/a}}
           e^{ i (k_\perp^2+m^2)^{1/2} ( \kappa- \kappa^{-1})/(2a)}
           \right|^2
-\nonumber \\
-        &= & \frac{|q|^2 e^{-\pi \Delta E/a } }{4 \pi^3 a  } 
+\\
+        &=  \frac{|q|^2 e^{-\pi \Delta E/a } }{4 \pi^3 a  } 
 \left\{K_{i \Delta E/a} [(k_\perp^2+m^2)^{1/2}/ a]\right\}^2,
-\end{eqnarray}
+\end{align*}
 where 
 $K_{\nu}(x)$ 
 is the modified Bessel function \cite{Gradshteynbook}.
@@ -3075,7 +3074,7 @@ a Rindler particle into the {\em Minkowski} vacuum is given by
 Eq.~(\ref {DWREM}) combined with the proper thermal factor [see 
 Eq.~(4.9) in \textcite{Higuchietal92b} for more details]:
 \begin{equation}
-^{\rm exc}\! R^{\rm em} = T^{-1} 
+^{\rm exc}\! R^{\rm em} = \frac{1}{T}
                       \int  dW^{\rm em} 
                       [1 + n(\omega) ],
 \label{PMEM}
@@ -3096,7 +3095,7 @@ Similarly, one can calculate the detector's excitation rate
 with simultaneous absorption of a Rindler particle
 from the Unruh thermal bath as
 \begin{equation}
-^{\rm exc}\! R^{\rm abs} = T^{-1} 
+^{\rm exc}\! R^{\rm abs} = \frac{1}{T}
                        \int  dW^{\rm abs} 
                        n(\omega ),
 \label{PMABS}
@@ -3242,7 +3241,7 @@ by the Rindler wedge as we shall see next. [We refer the reader to
 Let us start by considering the line element of a two-dimensional 
 Schwarzschild spacetime:
 \begin{equation}
-ds^2= \left( 1 - 2M/r \right) dt^2 - \left( 1 - 2M/r \right)^{-1} dr^2.
+ds^2= \left( 1 - 2M/r \right) dt^2 - \frac{1}{( 1 - 2M/r)} dr^2.
 \label{SS}
 \end{equation}
 This can be seen as describing a two-dimensional 
@@ -4289,7 +4288,7 @@ By using the fermionic field
 (\ref{FF}) in Eq.~(\ref{AMPI}) and carrying out the integral over $z$,
 we obtain
 \begin{small}  
-\begin{multline}
+\begin{multline*}
 {\cal A}^{p  \to n}_{(i)} 
  = 
 \frac{- \; (G_F /4\pi )\;\; \delta_{\sigma_e,-\sigma_\nu}}
@@ -4305,7 +4304,7 @@ e^{i( \Delta m \tau
 \{ [(\omega_\nu + m_\nu) (\omega_e - m_e) + k_\nu k_e] \cosh a\tau\\
 -  [(\omega_\nu + m_\nu) k_e + (\omega_e - m_e) k_\nu] \sinh a\tau
 \}.
-\end{multline}
+\end{multline*}
 \end{small}  
 
 Thus, the  differential transition rate  
@@ -5102,7 +5101,7 @@ j^{\mu}(x)j_{\mu}(x')
 \end{multline}
 Next, by substituting the current~(\ref{44}) in this formula, 
 we obtain  
-\begin{multline}
+\begin{multline*}
 ^{\rm in}\!R^{\rm tot}_{k_\bot}  =  -\frac{q^2}{T} 
 \int_{-\infty}^{\infty} \!\! d\tau '  \!\!
 \int_{-\infty}^{\infty} \!\! d\tau '' 
@@ -5114,7 +5113,7 @@ we obtain
 \\
 \times  
 \exp [  (i k_0/a) (\sinh a\tau ' - \sinh a\tau '' )],
-\end{multline}
+\end{multline*}
 where we have made the coordinate transformation 
 $t=a^{-1} \sinh a\tau $. Now, it is necessary again
 to factor out the total proper time 
