--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-28 11:26:56 -0400 
+%% Created for Pete Su at 2023-09-03 10:07:25 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Donoghue2017,
+	author = {Donoghue, John F and Ivanov, Mikhail M and Shkerin, Andrey},
+	date-added = {2023-09-03 10:06:46 -0400},
+	date-modified = {2023-09-03 10:07:25 -0400},
+	journal = {arXiv preprint },
+	note = {\href{https://arxiv.org/abs/1702.00319}{arXiv:1702.00319}},
+	title = {{EPFL lectures on general relativity as a quantum field theory}},
+	year = {2017}}
+
+@book{Donoghue2022,
+	author = {Donoghue, John and Sorbo, Lorenzo},
+	date-added = {2023-09-03 08:12:19 -0400},
+	date-modified = {2023-09-03 08:12:21 -0400},
+	publisher = {Princeton University Press},
+	title = {A prelude to quantum field theory},
+	year = {2022}}
 
 @article{Crispino2008,
 	author = {Lu{\'{\i}}s C. B. Crispino and Atsushi Higuchi and George E. A. Matsas},
