--- a/1702.00319/EPFLcombined.tex
+++ b/1702.00319/EPFLcombined.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper]{article}
+\documentclass[12pt]{article}
 \pdfoutput=1
 %\usepackage{style}
 \usepackage{amsmath}
@@ -14,7 +14,61 @@
 
 \DeclareGraphicsRule{.1}{mps}{*}{}
 
-\usepackage[left=3cm,right=2.5cm,top=2cm,bottom=3cm,bindingoffset=0cm]{geometry}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+\usepackage{slashed}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{amsthm}
+\usepackage{psfrag}
+\usepackage{graphicx}
+\usepackage{slashed}
+\usepackage[utf8]{inputenc}
+
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 
 %\DeclareGraphicsRule{.1}{mps}{*}{}
@@ -78,37 +132,29 @@
 
 
 
-\usepackage{slashed}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{amsthm}
-\usepackage{psfrag}
-\usepackage{graphicx}
-\usepackage{slashed}
-\usepackage[utf8]{inputenc}
-
 \bibliographystyle{utphys}
 
 \date{}
 
 \title{{\bf EPFL Lectures on General Relativity as a Quantum Field Theory  }}
 
-\author{{\bf John F. Donoghue$^{a}$,
+\author{{\normalsize John F. Donoghue$^{a}$,
 Mikhail M. Ivanov$^{b,c,d}$
-and Andrey Shkerin$^{b,c}$} \\ \\
-$^a$ Amherst Center for Fundamental Interactions, \\Department of Physics,
-University of Massachusetts\\
-Amherst, MA  01003, USA\\  \\
-$^b$ Institute of Physics, Laboratory of Particle Physics and Cosmology (LPPC), \\
-\'Ecole Polytechnique F\'ed\'erale de Lausanne (EPFL), \\
-CH-1015, Lausanne, Switzerland \\ \\
-$^c$ Institute for Nuclear Research of the
-Russian Academy of Sciences,\\
-60th October Anniversary Prospect, 7a, 117312
-Moscow, Russia \\ \\
-$^d$ Department of Particle Physics and Cosmology, \\
-Faculty of Physics, Moscow State University,\\
-Vorobjevy Gory, 119991 Moscow, Russia}
+and Andrey Shkerin$^{b,c}$} \\
+\normalsize $^a$ Amherst Center for Fundamental Interactions, \\
+\normalsize Department of Physics,
+\normalsize University of Massachusetts\\
+\normalsize Amherst, MA  01003, USA \\
+\normalsize $^b$ Institute of Physics, Laboratory of Particle Physics and Cosmology (LPPC), \\
+\normalsize \'Ecole Polytechnique F\'ed\'erale de Lausanne (EPFL), \\
+\normalsize CH-1015, Lausanne, Switzerland \\
+\normalsize $^c$ Institute for Nuclear Research of the
+\normalsize Russian Academy of Sciences,\\
+\normalsize 60th October Anniversary Prospect, 7a, 117312
+\normalsize Moscow, Russia  \\
+\normalsize $^d$ Department of Particle Physics and Cosmology, \\
+\normalsize Faculty of Physics, Moscow State University,\\
+\normalsize Vorobjevy Gory, 119991 Moscow, Russia}
 
 
 \begin{document}
@@ -3033,16 +3079,16 @@ As an instructive example of the application of the KLT--relations, consider the
 i\M^{(s)}_{\textit{EM}}(p_1,p_2,k_1,k_2)=
 \end{flalign*}
 &
-\raisebox{-7mm}{\begin{minipage}[h]{0.2\linewidth}
-\center{\includegraphics[width=0.9\linewidth]{EM_tree_1.pdf}}
+\raisebox{-7mm}{\begin{minipage}[h]{1in}
+\center{\includegraphics[width=1in]{EM_tree_1.pdf}}
 \end{minipage}
 $+$
-\begin{minipage}[h]{0.2\linewidth}
-\center{\includegraphics[width=0.9\linewidth]{EM_tree_2.pdf}}
+\begin{minipage}[h]{1in}
+\center{\includegraphics[width=1in]{EM_tree_2.pdf}}
 \end{minipage}
 $+$
-\begin{minipage}[h]{0.2\linewidth}
-\center{\includegraphics[width=0.9\linewidth]{EM_tree_3.pdf}}
+\begin{minipage}[h]{1in}
+\center{\includegraphics[width=1in]{EM_tree_3.pdf}}
 \end{minipage}
 $\,.$
 }
@@ -3143,7 +3189,7 @@ Let us turn to the third point of our program. The one--loop diagram responsible
 \end{flalign}
 In this expression $l_1^2=l_2^2=0$ are the cut momenta of the internal graviton lines, $h_i$ --- their polarizations, and $\lambda_i$ --- possible polarizations of the massless particle, $s=0,1$, and $D=4-2\epsilon$.
 
-\begin{figure}[h!]
+\begin{figure}[th]
 \begin{center}
 \begin{minipage}[h]{0.9\linewidth}
 \center{\includegraphics[width=0.4\linewidth]{GR_loop_light_bending.pdf}}
@@ -3155,9 +3201,9 @@ In this expression $l_1^2=l_2^2=0$ are the cut momenta of the internal graviton 
 
 Now one can compute the full amplitude $i\M^{(s)}=\frac{i}{\hbar}\M^{(s)}_{\textit{grav.}}+i\overset{1}{\M}^{(s)}_{\textit{grav.}}$. In the low--energy limit, $\omega\ll M$, where $\omega$ is the frequency of the massless particle, the leading contribution to $i\M^{(s)}$ is written as \cite{LightBending}
 \begin{flalign}
-i\M^{(s)}\simeq &\dfrac{\N^{(s)}}{\hbar}(M\omega)^2\times\left[\dfrac{\kappa^2}{t}+\kappa^4\dfrac{15}{512}\dfrac{M}{\sqrt{-t}}\right.\nonumber\\
-&+\left.\hbar\kappa^4\dfrac{15}{512\pi^2}\,\text{ln}\, \left(\dfrac{-t}{M^2}\right)-\hbar\kappa^4\dfrac{bu^{(s)}}{(8\pi)^2}\,\text{ln}\, \left(\dfrac{-t}{\mu^2}\right)\right.\nonumber\\
-&+\left.\hbar\kappa^4\dfrac{3}{128\pi^2}\,\text{ln}^2\left(\dfrac{-t}{\mu^2}\right)+\kappa^4\dfrac{M\omega}{8\pi}\dfrac{i}{t}\,\text{ln}\, \left(\dfrac{-t}{M^2}\right)\right]\,.
+i\M^{(s)} & \simeq \dfrac{\N^{(s)}}{\hbar}(M\omega)^2\times\left[\dfrac{\kappa^2}{t}+\kappa^4\dfrac{15}{512}\dfrac{M}{\sqrt{-t}}\right.\nonumber\\
+&\quad +\left.\hbar\kappa^4\dfrac{15}{512\pi^2}\,\text{ln}\, \left(\dfrac{-t}{M^2}\right)-\hbar\kappa^4\dfrac{bu^{(s)}}{(8\pi)^2}\,\text{ln}\, \left(\dfrac{-t}{\mu^2}\right)\right.\nonumber\\
+&\quad +\left.\hbar\kappa^4\dfrac{3}{128\pi^2}\,\text{ln}^2\left(\dfrac{-t}{\mu^2}\right)+\kappa^4\dfrac{M\omega}{8\pi}\dfrac{i}{t}\,\text{ln}\, \left(\dfrac{-t}{M^2}\right)\right]\,.
 \end{flalign}
 Here $\N^{(s)}$ is the prefactor which is equal to $1$ for the massless scalar, while for the photon it is given by $\N^{(1)}=(2M\omega)^2/(2\langle p_1\vert p_3\vert p_2]^2)$ for the $(+-)$ photon helicity configuration and the complex conjugate of this for the $(-+)$ photon helicity configuration. For $(++)$ and $(--)$ the amplitude vanishes. Calculating the graviton cut, the coefficient $bu^{(s)}$ equals $3/40$ for the case of the scalar particle and $-161/120$ for the case of photon. If one adds in the scalar/photon cut, these numbers change slightly but the general structure is the same \cite{bai}.  Finally, $t$ is the usual Mandelstam kinematic variable.
 
@@ -3222,8 +3268,8 @@ ir_\G\dfrac{\kappa^2}{(4\pi)^{2-\epsilon}}\left(\dfrac{s\,\text{ln}(-s)+t\,\text
 This reproduces the full structure of divergences of the corresponding one--loop amplitude \cite{Dunbar:1994bn}
 \be
 \begin{split}
-\M_{\textit{1-loop}}(-+;-+)= & ir_\G\dfrac{stu\kappa^2}{4(4\pi)^{2-\epsilon}}\M_{\textit{tree}}(-+;-+)\nonumber\\
-& \times\left(\dfrac{2}{\epsilon}\left(\dfrac{\text{ln}(-u)}{st}+\dfrac{\text{ln}(-t)}{su}+\dfrac{\text{ln}(-s)}{tu}\right)+\text{finite terms}\right)\,,
+\M_{\textit{1-loop}}(-+;-+) &= ir_\G\dfrac{stu\kappa^2}{4(4\pi)^{2-\epsilon}}\M_{\textit{tree}}(-+;-+)\nonumber\\
+&\quad  \times\left(\dfrac{2}{\epsilon}\left(\dfrac{\text{ln}(-u)}{st}+\dfrac{\text{ln}(-t)}{su}+\dfrac{\text{ln}(-s)}{tu}\right)+\text{finite terms}\right)\,,
 \end{split}
 \ee
 since in pure gravity at one loop there are no UV divergences. A similar divergence is present in $\M_{\textit{1-loop}}(++;++)$. The amplitudes with other helicity configurations contain no infinities.
@@ -3264,8 +3310,8 @@ We observe a difference from the case of QED, where such diagrams are forbidden 
 Let us go back to the four--graviton scattering process studied previously. After taking into account both radiative and one--loop corrections to the tree--level amplitude the answer becomes finite. For example, for the differential cross--section we have \cite{Donoghue:1999qh}
 \begin{flalign}
 &\left(\dfrac{d\sigma}{d\Omega}\right)_{\textit{tree}}+\left(\dfrac{d\sigma}{d\Omega}\right)_{\textit{rad.}}+\left(\dfrac{d\sigma}{d\Omega}\right)_{\textit{nonrad.}}=\nonumber &\\
-&\dfrac{\kappa^4 s^5}{2048\pi^2 t^2u^2}\left\lbrace 1+\dfrac{\kappa^2s}{16\pi^2}\left[\text{ln}\dfrac{-t}{s}\text{ln}\dfrac{-u}{s}+\dfrac{tu}{2s^2}f\left(\dfrac{-t}{s},\dfrac{-u}{s}\right)\right.\right.\nonumber &\\
-&\left.\left.-\left(\dfrac{t}{s}\text{ln}\dfrac{-t}{s}+\dfrac{u}{s}\text{ln}\dfrac{-u}{s}\right)\left(2\,\text{ln}(2\pi^2)+\gamma+\text{ln}\dfrac{s}{\Lambda^2}
+&\quad \,\,\dfrac{\kappa^4 s^5}{2048\pi^2 t^2u^2}\left\lbrace 1+\dfrac{\kappa^2s}{16\pi^2}\left[\text{ln}\dfrac{-t}{s}\text{ln}\dfrac{-u}{s}+\dfrac{tu}{2s^2}f\left(\dfrac{-t}{s},\dfrac{-u}{s}\right)\right.\right.\nonumber &\\
+&\left.\left.\quad -\left(\dfrac{t}{s}\text{ln}\dfrac{-t}{s}+\dfrac{u}{s}\text{ln}\dfrac{-u}{s}\right)\left(2\,\text{ln}(2\pi^2)+\gamma+\text{ln}\dfrac{s}{\Lambda^2}
 +\dfrac{\sum_{ij}\eta_i\eta_j\mathcal{F}^{(1)}(\gamma_{ij})}{\sum_{ij}\eta_i\eta_j\mathcal{F}^{(0)}(\gamma_{ij})}\right)\right]\right\rbrace\,, &
 \end{flalign}
 where
