--- a/bib.bib
+++ b/bib.bib
@@ -1,18 +1,78 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-09-03 10:07:25 -0400 
+%% Created for Pete Su at 2023-09-03 15:33:07 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{Dirac1927a,
+	author = {Dirac, Paul Adrien Maurice},
+	date-added = {2023-09-03 15:32:59 -0400},
+	date-modified = {2023-09-03 15:33:02 -0400},
+	journal = {Proceedings of the Royal Society of London. Series A, Containing Papers of a Mathematical and Physical Character},
+	number = {767},
+	pages = {243--265},
+	publisher = {The Royal Society London},
+	title = {The quantum theory of the emission and absorption of radiation},
+	volume = {114},
+	year = {1927}}
+
+@book{Courvoisier2013,
+	author = {Thierry J.-L. Courvoisier},
+	date-added = {2023-09-03 15:32:03 -0400},
+	date-modified = {2023-09-03 15:32:05 -0400},
+	doi = {10.1007/978-3-642-30970-0},
+	publisher = {Springer Berlin Heidelberg},
+	title = {High Energy Astrophysics},
+	url = {https://doi.org/10.1007%2F978-3-642-30970-0},
+	year = 2013,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-642-30970-0},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-642-30970-0}}
+
+@book{Payne-Gaposchkin1996,
+	author = {Payne-Gaposchkin, Cecilia},
+	date-added = {2023-09-03 15:31:33 -0400},
+	date-modified = {2023-09-03 15:31:35 -0400},
+	publisher = {Cambridge University Press},
+	title = {Cecilia Payne-Gaposchkin: an autobiography and other recollections},
+	year = {1996}}
+
+@misc{Brown2017,
+	author = {Edward Brown},
+	date-added = {2023-09-03 15:30:30 -0400},
+	date-modified = {2023-09-03 15:30:50 -0400},
+	howpublished = {Online Notes},
+	note = {\href{https://web.pa.msu.edu/people/ebrown/docs/radiative-notes.pdf}{PDF}},
+	title = {Radiation in Astrophysics}}
+
+@misc{Brown2021,
+	author = {Edward Brown},
+	date-added = {2023-09-03 15:27:39 -0400},
+	date-modified = {2023-09-03 15:28:23 -0400},
+	howpublished = {Online Notes},
+	note = {\href{https://github.com/Open-Astrophysics-Bookshelf/stellar-physics-notes}{github}},
+	title = {Stellar Physics}}
+
+@book{Rohlfs2004,
+	author = {K. Rohlfs and T. L. Wilson},
+	date-added = {2023-09-03 15:16:26 -0400},
+	date-modified = {2023-09-03 15:16:30 -0400},
+	doi = {10.1007/978-3-662-05394-2},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Tools of Radio Astronomy},
+	url = {https://doi.org/10.1007%2F978-3-662-05394-2},
+	year = 2004,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-662-05394-2},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-662-05394-2}}
+
 @article{Donoghue2017,
 	author = {Donoghue, John F and Ivanov, Mikhail M and Shkerin, Andrey},
 	date-added = {2023-09-03 10:06:46 -0400},
 	date-modified = {2023-09-03 10:07:25 -0400},
-	journal = {arXiv preprint },
+	journal = {arXiv preprint},
 	note = {\href{https://arxiv.org/abs/1702.00319}{arXiv:1702.00319}},
 	title = {{EPFL lectures on general relativity as a quantum field theory}},
 	year = {2017}}
@@ -6802,10 +6862,10 @@
 	title = {The physics of quantum mechanics},
 	year = {2013}}
 
-@book{Binney2016astrophysics,
+@book{Binney2016,
 	author = {Binney, James},
 	date-added = {2023-07-21 07:46:32 -0400},
-	date-modified = {2023-07-21 07:46:40 -0400},
+	date-modified = {2023-09-03 15:19:52 -0400},
 	publisher = {Oxford University Press},
 	title = {Astrophysics: a very short introduction},
 	year = {2016}}
@@ -6818,10 +6878,10 @@
 	title = {Introduction to astronomical spectroscopy},
 	year = {2012}}
 
-@book{welz2008atomic,
+@book{Welz2008,
 	author = {Welz, Bernhard and Sperling, Michael},
 	date-added = {2023-07-21 07:35:10 -0400},
-	date-modified = {2023-07-21 07:35:10 -0400},
+	date-modified = {2023-09-03 15:19:19 -0400},
 	publisher = {John Wiley \& Sons},
 	title = {Atomic absorption spectrometry},
 	year = {2008}}
@@ -6886,10 +6946,10 @@
 	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-642-39950-3},
 	bdsk-url-2 = {https://doi.org/10.1007/978-3-642-39950-3}}
 
-@book{Wilson2009tools,
+@book{Wilson2009,
 	author = {Wilson, Thomas L and Rohlfs, Kristen and H{\"u}ttemeister, Susanne},
 	date-added = {2023-07-21 07:25:19 -0400},
-	date-modified = {2023-07-21 07:26:17 -0400},
+	date-modified = {2023-09-03 15:18:10 -0400},
 	publisher = {Springer},
 	title = {Tools of radio astronomy},
 	year = {2009}}
