--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,138 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-09-03 15:33:07 -0400 
+%% Created for Pete Su at 2023-09-03 18:52:54 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Mingarelli2016,
+	author = {Chiara M. F. Mingarelli},
+	date-added = {2023-09-03 18:52:50 -0400},
+	date-modified = {2023-09-03 18:52:52 -0400},
+	doi = {10.1007/978-3-319-18401-2},
+	publisher = {Springer International Publishing},
+	title = {Gravitational Wave Astrophysics with Pulsar Timing Arrays},
+	url = {https://doi.org/10.1007%2F978-3-319-18401-2},
+	year = 2016,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-319-18401-2},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-319-18401-2}}
+
+@book{Ekeberg2019,
+	author = {Ekeberg, Bj{\"o}rn},
+	date-added = {2023-09-03 18:51:46 -0400},
+	date-modified = {2023-09-03 18:51:48 -0400},
+	publisher = {U of Minnesota Press},
+	title = {Metaphysical Experiments: Physics and the Invention of the Universe},
+	volume = {49},
+	year = {2019}}
+
+@article{McDowell2018,
+	author = {Jonathan C. McDowell},
+	date-added = {2023-09-03 18:50:53 -0400},
+	date-modified = {2023-09-03 18:50:54 -0400},
+	doi = {10.1016/j.actaastro.2018.07.003},
+	journal = {Acta Astronautica},
+	note = {\href{http://arxiv.org/abs/1807.07894v1}{arxiv:1807.07894v1}},
+	pages = {668--677},
+	publisher = {Elsevier {BV}},
+	title = {The edge of space: Revisiting the Karman Line},
+	url = {https://doi.org/10.1016%2Fj.actaastro.2018.07.003},
+	volume = {151},
+	year = 2018,
+	bdsk-url-1 = {https://doi.org/10.1016%2Fj.actaastro.2018.07.003},
+	bdsk-url-2 = {https://doi.org/10.1016/j.actaastro.2018.07.003}}
+
+@article{Drout2017,
+	author = {M. R. Drout and A. L. Piro and B. J. Shappee and C. D. Kilpatrick and J. D. Simon and C. Contreras and D. A. Coulter and R. J. Foley and M. R. Siebert and N. Morrell and K. Boutsia and F. Di Mille and T. W.-S. Holoien and D. Kasen and J. A. Kollmeier and B. F. Madore and A. J. Monson and A. Murguia-Berthier and Y.-C. Pan and J. X. Prochaska and E. Ramirez-Ruiz and A. Rest and C. Adams and K. Alatalo and E. Ba{\~{n}}ados and J. Baughman and T. C. Beers and R. A. Bernstein and T. Bitsakis and A. Campillay and T. T. Hansen and C. R. Higgs and A. P. Ji and G. Maravelias and J. L. Marshall and C. Moni Bidin and J. L. Prieto and K. C. Rasmussen and C. Rojas-Bravo and A. L. Strom and N. Ulloa and J. Vargas-Gonz{\'{a}}lez and Z. Wan and D. D. Whitten},
+	date-added = {2023-09-03 18:36:51 -0400},
+	date-modified = {2023-09-03 18:36:53 -0400},
+	doi = {10.1126/science.aaq0049},
+	journal = {Science},
+	number = {6370},
+	pages = {1570--1574},
+	publisher = {American Association for the Advancement of Science ({AAAS})},
+	title = {Light curves of the neutron star merger {GW}170817/{SSS}17a: Implications for r-process nucleosynthesis},
+	url = {https://doi.org/10.1126%2Fscience.aaq0049},
+	volume = {358},
+	year = 2017,
+	bdsk-url-1 = {https://doi.org/10.1126%2Fscience.aaq0049},
+	bdsk-url-2 = {https://doi.org/10.1126/science.aaq0049}}
+
+@book{Kundt2001,
+	author = {Wolfgang Kundt},
+	date-added = {2023-09-03 18:36:03 -0400},
+	date-modified = {2023-09-03 18:36:05 -0400},
+	doi = {10.1007/978-3-662-04347-9},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Astrophysics},
+	url = {https://doi.org/10.1007%2F978-3-662-04347-9},
+	year = 2001,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-662-04347-9},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-662-04347-9}}
+
+@book{Harwit2006,
+	author = {Martin Harwit},
+	date-added = {2023-09-03 18:35:09 -0400},
+	date-modified = {2023-09-03 18:35:28 -0400},
+	doi = {10.1007/978-0-387-33228-4},
+	publisher = {Springer New York},
+	title = {Astrophysical Concepts},
+	url = {https://doi.org/10.1007%2F978-0-387-33228-4},
+	year = 2006,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-0-387-33228-4},
+	bdsk-url-2 = {https://doi.org/10.1007/978-0-387-33228-4}}
+
+@book{Hansen2004,
+	author = {Carl J. Hansen and Steven D. Kawaler and Virginia Trimble},
+	date-added = {2023-09-03 18:33:21 -0400},
+	date-modified = {2023-09-03 18:33:24 -0400},
+	doi = {10.1007/978-1-4419-9110-2},
+	publisher = {Springer New York},
+	title = {Stellar Interiors},
+	url = {https://doi.org/10.1007%2F978-1-4419-9110-2},
+	year = 2004,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-1-4419-9110-2},
+	bdsk-url-2 = {https://doi.org/10.1007/978-1-4419-9110-2}}
+
+@book{Ghisellini2013,
+	author = {Gabriele Ghisellini},
+	date-added = {2023-09-03 18:32:21 -0400},
+	date-modified = {2023-09-03 18:32:23 -0400},
+	doi = {10.1007/978-3-319-00612-3},
+	publisher = {Springer International Publishing},
+	title = {Radiative Processes in High Energy Astrophysics},
+	url = {https://doi.org/10.1007%2F978-3-319-00612-3},
+	year = 2013,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-319-00612-3},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-319-00612-3}}
+
+@article{Banik2022,
+	author = {Indranil Banik and Hongsheng Zhao},
+	date-added = {2023-09-03 18:31:56 -0400},
+	date-modified = {2023-09-03 18:31:57 -0400},
+	doi = {10.3390/sym14071331},
+	journal = {Symmetry},
+	number = {7},
+	pages = {1331},
+	publisher = {{MDPI} {AG}},
+	title = {From Galactic Bars to the Hubble Tension: Weighing Up the Astrophysical Evidence for Milgromian Gravity},
+	url = {https://doi.org/10.3390%2Fsym14071331},
+	volume = {14},
+	year = 2022,
+	bdsk-url-1 = {https://doi.org/10.3390%2Fsym14071331},
+	bdsk-url-2 = {https://doi.org/10.3390/sym14071331}}
+
+@misc{Brown2020,
+	author = {Edward Brown},
+	date-added = {2023-09-03 18:30:31 -0400},
+	date-modified = {2023-09-03 18:31:03 -0400},
+	howpublished = {Online Notes},
+	note = {\href{https://web.pa.msu.edu/people/ebrown/docs/intro-stellar-physics.pdf}{PDF}},
+	title = {To Build a Star},
+	year = {2020}}
 
 @article{Dirac1927a,
 	author = {Dirac, Paul Adrien Maurice},
@@ -43,18 +169,20 @@
 @misc{Brown2017,
 	author = {Edward Brown},
 	date-added = {2023-09-03 15:30:30 -0400},
-	date-modified = {2023-09-03 15:30:50 -0400},
+	date-modified = {2023-09-03 18:31:16 -0400},
 	howpublished = {Online Notes},
 	note = {\href{https://web.pa.msu.edu/people/ebrown/docs/radiative-notes.pdf}{PDF}},
-	title = {Radiation in Astrophysics}}
+	title = {Radiation in Astrophysics},
+	year = {2017}}
 
 @misc{Brown2021,
 	author = {Edward Brown},
 	date-added = {2023-09-03 15:27:39 -0400},
-	date-modified = {2023-09-03 15:28:23 -0400},
+	date-modified = {2023-09-03 16:16:48 -0400},
 	howpublished = {Online Notes},
 	note = {\href{https://github.com/Open-Astrophysics-Bookshelf/stellar-physics-notes}{github}},
-	title = {Stellar Physics}}
+	title = {Stellar Astrophysics},
+	year = {2021}}
 
 @book{Rohlfs2004,
 	author = {K. Rohlfs and T. L. Wilson},
