--- a/2308.05119/2308.05119.tex
+++ b/2308.05119/2308.05119.tex
@@ -3,7 +3,7 @@
 % in LaTeX
 % 2023 August 8 - second version sent for publication
 
-\documentclass[reqno]{amsart}
+\documentclass[reqno,12pt]{amsart}
 \usepackage[foot]{amsaddr}
 
 \usepackage[utf8]{inputenc}
@@ -30,6 +30,52 @@ urlcolor=myurlcolor}
 \usepackage[mathscr]{euscript}
 
 \hfuzz=6pt
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 %\MompileMatrices
 
@@ -81,16 +127,6 @@ urlcolor=myurlcolor}
         \newcommand{\ean}{\end{eqnarray*}}
         \newcommand{\barr}{\begin{array}}
         \newcommand{\earr}{\end{array}}
-
-	\textwidth 6in
-	\textheight 8.5in	\evensidemargin .25in
-	\oddsidemargin .25in
-	\topmargin .25in
-	\headsep 0in
-	\headheight 0in
-	\footskip .5in
-	\pagestyle{plain}
-	\pagenumbering{arabic}
 
 \begin{document}
 \title{Ho\`ang Xu\^an S\'inh's Thesis: \\ Categorifying Group Theory}
@@ -997,12 +1033,13 @@ Pic-category, to $\G_C$.
 
 \vskip 1em
 
-\subsection*{Acknowledgements}   
+\subsection{Acknowledgements}   
 
 I thank Ho\`ang Xu\^an S\'inh for answering my questions about her thesis, Lisa
 Raphals for translating my questions into French, and David Egolf and David Michael Roberts for pointing out mistakes and ways in which this paper could be improved.
 
 \begin{thebibliography}{99}
+\raggedright
 
 \bibitem{BL04}
 John C.\ Baez and Aaron D.\ Lauda, Higher-dimensional algebra {V}: 2-groups, \textsl{Theor.\ Appl.\ Categ.} \textbf{12} (2004), 423--491.
