--- a/2308.05119/2308.05119.tex
+++ b/2308.05119/2308.05119.tex
@@ -15,7 +15,7 @@
 %\usepackage{slashed}
 \usepackage[all,cmtip]{xy}
 
-\usepackage[bookmarks=false,breaklinks=true]{hyperref}
+\usepackage[breaklinks=true]{hyperref}
 \usepackage{float}
 \usepackage{graphicx}
 \usepackage{color}
@@ -50,7 +50,7 @@ urlcolor=myurlcolor}
 
 % hyperref last because otherwise some things go wrong.
 \usepackage{hyperref}
-\hypersetup{colorlinks=true
+\hypersetup{colorlinks=true,bookmarks=true,
 ,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
