--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-09-04 08:38:36 -0400 
+%% Created for Pete Su at 2023-09-05 07:26:33 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Baez2023,
+	author = {Baez, John C},
+	date-added = {2023-09-05 07:12:40 -0400},
+	date-modified = {2023-09-05 07:26:33 -0400},
+	journal = {arXiv preprint},
+	keywords = {Mathematics - Category Theory, Category Theory (math.CT), history, groups, group theory},
+	note = {\href{https://arxiv.org/abs/2308.05119}{arXiv:2308.05119}},
+	title = {{Ho{\`a}ng Xu{\^a}n S{\'\i}nh's Thesis: Categorifying Group Theory}},
+	year = {2023}}
 
 @book{Cohen-Tannoudji2019,
 	author = {Cohen-Tannoudji, C. and Diu, B. and Lalo{\"e}, F.},
